<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.RegisterFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/icback"
            android:paddingTop="40dp">

            <TextView
                android:id="@+id/textViewCriarConta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_title_toolbar_register_fragment"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"/>
        </com.google.android.material.appbar.MaterialToolbar>
        
        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp">
            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_text"
                android:textColor="@color/white"/>
            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/hint_edit_email"
                android:inputType="textEmailAddress"
                style="@style/EditTextTheme"
                android:layout_marginTop="4dp"
                android:background="@drawable/bg_edit_text"/>
            <TextView
                android:id="@+id/textViewSenha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_text"
                android:textColor="@color/white"
                android:layout_marginTop="16dp"/>
            <EditText
                android:id="@+id/editTextSenha"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="textPassword"
                android:hint="@string/hint_edit_password"
                style="@style/EditTextTheme"
                android:layout_marginTop="4dp"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_button_register_fragment"
                app:backgroundTint="@null"
                style="@style/ButtonTheme"
                android:layout_marginTop="16dp"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/white"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                tools:visibility="visible"
                android:visibility="invisible"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/nome"
                android:text="@string/meunome"
                android:textAlignment="center"
                android:textColor="@color/white"
                />

        </LinearLayout>




    </LinearLayout>



</ScrollView>